--- a/example/.gitignore
+++ b/example/.gitignore
@@ -35,3 +35,9 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Removing platforms from repo
+android/
+ios/
+web/
+macos/
